missing in the last commit, use qgis.db instead of config file to store transformations

--- a/resources.qrc
+++ b/resources.qrc
@@ -1,3 +1,5 @@
 <RCC>
-    <qresource prefix="/transformationTool" />
+    <qresource prefix="/transformationTools">
+        <file>icons/faunalia_logo.png</file>
+    </qresource>
 </RCC>
