--- a/ui/selectTransformation.ui
+++ b/ui/selectTransformation.ui
@@ -6,15 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>610</width>
+    <width>731</width>
     <height>219</height>
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Manage transformations</string>
+   <string>Select a transformation</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
-   <item row="1" column="0" colspan="2">
+   <item row="1" column="1" colspan="2">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -24,13 +24,13 @@
      </property>
     </widget>
    </item>
-   <item row="0" column="0" colspan="2">
+   <item row="0" column="0" colspan="3">
     <widget class="QGroupBox" name="groupBox">
      <property name="title">
       <string>Transformations list</string>
      </property>
      <layout class="QGridLayout" name="gridLayout">
-      <item row="0" column="0" rowspan="2">
+      <item row="2" column="0">
        <widget class="QTableView" name="table">
         <property name="selectionMode">
          <enum>QAbstractItemView::SingleSelection</enum>
@@ -47,6 +47,13 @@
        </widget>
       </item>
      </layout>
+    </widget>
+   </item>
+   <item row="1" column="0">
+    <widget class="QCheckBox" name="applyToNext">
+     <property name="text">
+      <string>Apply to next layers with the same input CRS</string>
+     </property>
     </widget>
    </item>
   </layout>
