--- a/resources.qrc
+++ b/resources.qrc
@@ -1,6 +1,9 @@
 <RCC>
-    <qresource prefix="/transformationTools">
-        <file>icons/faunalia_logo.png</file>
+    <qresource prefix="/plugins/TransformationTools">
         <file>icons/transformation_manager.png</file>
+        <file>icons/tooltip.png</file>
+    </qresource>
+    <qresource prefix="/faunalia">
+        <file alias="logo">icons/faunalia_logo.png</file>
     </qresource>
 </RCC>
