--- a/ui/transformationManager.ui
+++ b/ui/transformationManager.ui
@@ -6,31 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>749</width>
-    <height>392</height>
+    <width>777</width>
+    <height>368</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Manage transformations</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
-   <item row="1" column="0" colspan="2">
-    <widget class="QDialogButtonBox" name="buttonBox">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="standardButtons">
-      <set>QDialogButtonBox::Close</set>
-     </property>
-    </widget>
-   </item>
    <item row="0" column="0" colspan="2">
     <widget class="QGroupBox" name="groupBox">
      <property name="title">
       <string>Transformations list</string>
      </property>
      <layout class="QGridLayout" name="gridLayout">
-      <item row="0" column="0" rowspan="4" colspan="3">
+      <item row="0" column="0" rowspan="4">
        <widget class="QTableView" name="table">
         <property name="selectionMode">
          <enum>QAbstractItemView::SingleSelection</enum>
@@ -46,28 +36,58 @@
         </attribute>
        </widget>
       </item>
-      <item row="4" column="0">
+      <item row="0" column="1">
        <widget class="QPushButton" name="newBtn">
         <property name="text">
          <string>New</string>
         </property>
        </widget>
       </item>
-      <item row="4" column="1">
+      <item row="1" column="1">
        <widget class="QPushButton" name="editBtn">
         <property name="text">
          <string>Edit</string>
         </property>
        </widget>
       </item>
-      <item row="4" column="2">
+      <item row="2" column="1">
        <widget class="QPushButton" name="deleteBtn">
         <property name="text">
          <string>Delete</string>
         </property>
        </widget>
       </item>
+      <item row="3" column="1">
+       <spacer name="verticalSpacer">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>82</width>
+          <height>179</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
      </layout>
+    </widget>
+   </item>
+   <item row="1" column="0">
+    <widget class="QPushButton" name="applyBtn">
+     <property name="text">
+      <string>Apply now</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="1">
+    <widget class="QDialogButtonBox" name="buttonBox">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="standardButtons">
+      <set>QDialogButtonBox::Close</set>
+     </property>
     </widget>
    </item>
   </layout>
