--- a/ui/transformationManager.ui
+++ b/ui/transformationManager.ui
@@ -6,15 +6,15 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>777</width>
-    <height>368</height>
+    <width>800</width>
+    <height>353</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Manage transformations</string>
   </property>
   <layout class="QGridLayout" name="gridLayout_2">
-   <item row="0" column="0" colspan="2">
+   <item row="0" column="0" colspan="3">
     <widget class="QGroupBox" name="groupBox">
      <property name="title">
       <string>Transformations list</string>
@@ -64,8 +64,8 @@
         </property>
         <property name="sizeHint" stdset="0">
          <size>
-          <width>82</width>
-          <height>179</height>
+          <width>20</width>
+          <height>40</height>
          </size>
         </property>
        </spacer>
@@ -73,20 +73,27 @@
      </layout>
     </widget>
    </item>
-   <item row="1" column="0">
-    <widget class="QPushButton" name="applyBtn">
-     <property name="text">
-      <string>Apply now</string>
-     </property>
-    </widget>
-   </item>
-   <item row="1" column="1">
+   <item row="1" column="2">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
      </property>
      <property name="standardButtons">
       <set>QDialogButtonBox::Close</set>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0">
+    <widget class="QPushButton" name="applyDirectBtn">
+     <property name="text">
+      <string>Apply CRS A -&gt; CRS B (direct)</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="1">
+    <widget class="QPushButton" name="applyInverseBtn">
+     <property name="text">
+      <string>Apply CRS A &lt;- CRS B (inverse)</string>
      </property>
     </widget>
    </item>
